[package]
name = "msgpack-to-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
dotenv = "0.15.0"
prost = "0.12.4"
prost-types = "0.12.4"
rmp-serde = "1.2.0"
serde = "1.0.198"

[build-dependencies]
prost-build = "0.12.4"
